--- a/index.html
+++ b/index.html
@@ -345,42 +345,42 @@
           <h2 class="clietnts-title">Постійні клієнти</h2>
           <ul class="regular-clients-list">
             <li class="regular-clients-item">
-              <a class="regular-clients-link">
+              <a href="" class="regular-clients-link">
                 <svg class="clients-logo">
                   <use href="./images/symbol-defs.svg#icon-ya-co" class="clients-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="regular-clients-item">
-              <a class="regular-clients-link">
+              <a href="" class="regular-clients-link">
                 <svg class="clients-logo">
                   <use href="./images/symbol-defs.svg#icon-tagline" class="clients-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="regular-clients-item">
-              <a class="regular-clients-link">
+              <a href="" class="regular-clients-link">
                 <svg class="clients-logo">
                   <use href="./images/symbol-defs.svg#icon-company" class="clients-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="regular-clients-item">
-              <a class="regular-clients-link">
+              <a href="" class="regular-clients-link">
                 <svg class="clients-logo">
                   <use href="./images/symbol-defs.svg#icon-fosterpeters" class="clients-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="regular-clients-item">
-              <a class="regular-clients-link">
+              <a href="" class="regular-clients-link">
                 <svg class="clients-logo">
                   <use href="./images/symbol-defs.svg#icon-leaf-logo" class="clients-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="regular-clients-item">
-              <a class="regular-clients-link">
+              <a href="" class="regular-clients-link">
                 <svg class="clients-logo">
                   <use href="./images/symbol-defs.svg#icon-cube-logo" class="clients-logo"></use>
                 </svg>
